<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_square_pop_up"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origine_du_produit"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/non_biologique"
                android:textColor="@color/black"/>

            <CheckBox
                android:id="@+id/checkBoxNonBio"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/biologique"
                android:textColor="@color/black"/>

            <CheckBox
                android:id="@+id/checkBoxBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/potager"
                android:textColor="@color/black"/>

            <CheckBox
                android:id="@+id/checkBoxPotager"
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/black"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textErrorBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkRed"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            >

            <Button
                android:id="@+id/buttonValidateBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button_border"
                android:text="@string/strValider" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>